#49 re-fixed shifted combobox in the parameters panel (in a better way)

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -347,10 +347,6 @@ h6.header {
     top: -14px;
 }
 
-#parametersPanel .select-wrapper .select-dropdown {
-    display: inline-block;
-}
-
 #welcomePanel {
     flex: 1;
     color: #9e9e9e;
